# cerebro-reproduce

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.sh  standard_pipeline.py
scripts/: 01_gen_cg.sh  02_extract_entries.py  03_ast_walk_and_map_dims.py  04_build_sequences.py  05_train_bert.py  06_infer.py  run_all.py
tests/: test_run_all.py  test_standard_pipeline.py  test_train_bert.py
