[project]
name = "cerebro-reproduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.3.0",
    "hf-xet>=1.2.0",
    "imblearn>=0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm==4.67.1",
    "transformers>=4.57.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript==0.23.1",
    "tree-sitter-python==0.23.6",
    "tree-sitter-typescript==0.23.2",
]
